--- a/spirit.html
+++ b/spirit.html
@@ -1,27 +1,82 @@
-<html>
-  <head>
-    <script src="https://spiritairlines-stage.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
-    <style>
-      body {
-        background-color: #333; 
-      }
-      #inline-widget {
-        height: 768px;
-        width: 544px;
-        max-width: 100%;
-        max-height: 100%;
-        margin: 32px auto;
-        position: relative;
-        background-color: #fff;
-      }
-    </style>  
-  </head>
-  <body>
-    <div id="inline-widget"></div>  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Protected Web Page</title>
+	<script src="https://spiritairlines-stage.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
+
+	<style>
+        body { font-family: Arial, sans-serif; display: none; /* Hide content initially */ }
+        header { 
+            background-color: #f8f9fa; 
+            padding: 10px; 
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center; 
+        }
+        .logo {
+            width: 120px; /* Adjust size as necessary */
+            height: auto;
+        }
+        .hamburger {
+            display: block;
+            width: 30px; /* size of the hamburger icon */
+            height: 3px; /* thickness of the hamburger bars */
+            background-color: #333; /* color of the hamburger icon */
+            position: relative; /* needed to position the pseudo-elements */
+            transition: background 0.3s ease;
+        }
+        .hamburger::before, .hamburger::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 3px;
+            background-color: #333;
+            transition: transform 0.3s ease;
+        }
+        .hamburger::before {
+            top: -10px;
+        }
+        .hamburger::after {
+            top: 10px;
+        }
+        main { 
+            padding: 20px; 
+            text-align: left; 
+        }
+        footer { 
+            background-color: #f8f9fa; 
+            padding: 10px; 
+            text-align: center; 
+        }
+    </style>
+</head>
+<body>
     <script>
-      var chat = Quiq({
-        pageConfigurationId: 'guest-care-llm-assistant'
-      });
+        var correctPassword = 'password123'; // Set your password here
+        var userPassword = prompt('Please enter the password to view this site:');
+        if (userPassword !== correctPassword) {
+            document.body.innerHTML = '<h1>Access Denied</h1>'; // Message shown if password is wrong
+        } else {
+			var chat = Quiq({
+				pageConfigurationId: 'guest-care-llm-assistant'
+			});
+            document.body.style.display = 'block'; // Show content if password is correct
+        }
     </script>
-  </body>
+    <header>
+        <img src="path-to-your-logo.png" alt="Company Logo" class="logo">
+        <div class="hamburger"></div>
+    </header>
+    <main>
+        <p>This is a protected HTML page that requires a password to view.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 Website Name</p>
+    </footer>
+	<script>
+	</script>
+</body>
 </html>
+
