--- a/spirit.html
+++ b/spirit.html
@@ -1,81 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<script src="https://spiritairlines-stage.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spirit Airlines AI Agent Test Page</title>
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-        }
-        body { font-family: Arial, sans-serif; display: none; /* Hide content initially */ }
-        header {
-            background-color: #FFEC00;
-            padding: 11px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .logo {
-            width: 145px; /* Adjust size as necessary */
-            height: auto;
-        }
-        .hamburger {
-            display: block;
-            width: 22px; /* size of the hamburger icon */
-            height: 3px; /* thickness of the hamburger bars */
-            background-color: #333; /* color of the hamburger icon */
-            position: relative; /* needed to position the pseudo-elements */
-            transition: background 0.3s ease;
-        }
-        .hamburger::before, .hamburger::after {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 3px;
-            background-color: #333;
-            transition: transform 0.3s ease;
-        }
-        .hamburger::before {
-            top: -8px;
-        }
-        .hamburger::after {
-            top: 8px;
-        }
-        main {
-            flex: 1; /* Flex grow to take available space */
-            padding: 20px;
-            text-align: left;
-        }
-        footer {
-            background-color: #191919;
-            padding: 20px;
-            text-align: center;
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Spirit Airlines AI Agent Test Page</title>
+	<style>
+		html,
+		body {
+			height: 100%;
+			margin: 0;
+			padding: 0;
+			display: flex;
+			flex-direction: column;
+		}
+
+		body {
+			font-family: Arial, sans-serif;
+			display: none;
+			/* Hide content initially */
+		}
+
+		header {
+			background-color: #FFEC00;
+			padding: 0px 20px;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			height: 60px;
+			box-sizing: border-box;
+		}
+
+		.logo {
+			width: 98px;
+			/* Adjust size as necessary */
+			height: auto;
+		}
+
+		.hamburger {
+			display: block;
+			width: 22px;
+			/* size of the hamburger icon */
+			height: 3px;
+			/* thickness of the hamburger bars */
+			background-color: #333;
+			/* color of the hamburger icon */
+			position: relative;
+			/* needed to position the pseudo-elements */
+			transition: background 0.3s ease;
+		}
+
+		.hamburger::before,
+		.hamburger::after {
+			content: '';
+			position: absolute;
+			width: 100%;
+			height: 3px;
+			background-color: #333;
+			transition: transform 0.3s ease;
+		}
+
+		.hamburger::before {
+			top: -8px;
+		}
+
+		.hamburger::after {
+			top: 8px;
+		}
+
+		main {
+			flex: 1;
+			/* Flex grow to take available space */
+			padding: 20px;
+			text-align: left;
+			box-sizing: border-box;
+		}
+
+		footer {
+			background-color: #191919;
+			padding: 7px;
+			text-align: center;
 			color: #fff;
-        }
+			box-sizing: border-box;
+		}
+
 		li {
 			line-height: 2;
 		}
-    </style>
+	</style>
 </head>
+
 <body>
-    <script>
-        var correctPassword = 'quiq-spirit'; // Set your password here
-        var userPassword = prompt('Please enter the password to view this site:');
-        if (userPassword !== correctPassword) {
-            document.body.innerHTML = '<h1>Access Denied</h1>'; // Message shown if password is wrong
-        } else {
-            document.body.style.display = 'flex'; // Show content and use flex if password is correct
+	<script>
+		var correctPassword = 'quiq-spirit'; // Set your password here
+		var userPassword = prompt('Please enter the password to view this site:');
+		if (userPassword !== correctPassword) {
+			document.body.innerHTML = '<h1>Access Denied</h1>'; // Message shown if password is wrong
+		} else {
+			document.body.style.display = 'flex'; // Show content and use flex if password is correct
 			var chat = Quiq({
-    			pageConfigurationId: 'guest-care-llm-assistant'
-  			});
-        }
-    </script>
+				pageConfigurationId: 'guest-care-llm-assistant'
+			});
+		}
+	</script>
 	<header>
 		<img src="https://proservices-static-prod.quiq-cdn.com/shared/spiritairlines/Spirit-Banner-Transparent-Logo-2.png" alt="Spirit Airlines Logo" class="logo">
 		<div class="hamburger"></div>
@@ -94,4 +122,5 @@
 		<p>&copy; AI Agent powered by <strong>Quiq</strong></p>
 	</footer>
 </body>
+
 </html>
