--- a/spirit.html
+++ b/spirit.html
@@ -93,7 +93,7 @@
 
 <body>
 	<script>
-		var correctPassword = 'quiq-spirit'; // Set your password here
+		var correctPassword = 'quiq'; // Set your password here
 		var userPassword = prompt('Please enter the password to view this site:');
 		if (userPassword !== correctPassword) {
 			document.body.innerHTML = '<h1>Access Denied</h1>'; // Message shown if password is wrong
