--- a/spirit.html
+++ b/spirit.html
@@ -125,7 +125,7 @@
 		} else {
 			document.body.style.display = 'flex'; // Show content and use flex if password is correct
 			var chat = Quiq({
-				pageConfigurationId: 'guest-care-llm-assistant'
+				pageConfigurationId: 'ai-agent-cs'
 			});
 		}
 	</script>
