--- a/bobs.html
+++ b/bobs.html
@@ -23,7 +23,7 @@
 		}
 
 		header {
-			background-color: #44586e;
+			background-color: #f5f5f5;
 			padding: 0px 20px;
 			display: flex;
 			justify-content: space-between;
@@ -33,8 +33,7 @@
 		}
 
 		.logo {
-			width: 98px;
-			/* Adjust size as necessary */
+			width: 222px;
 			height: auto;
 		}
 
