--- a/bobs.html
+++ b/bobs.html
@@ -124,7 +124,7 @@
 		} else {
 			document.body.style.display = 'flex';
 			var chat = Quiq({
-				pageConfigurationId: 'ai-agent-bobs'
+				pageConfigurationId: 'ai-agent-cs'
 			});
 		}
 	</script>
