--- a/bobs.html
+++ b/bobs.html
@@ -23,13 +23,14 @@
 		}
 
 		header {
-			background-color: #f5f5f5;
+			background-color: #fff;
 			padding: 0px 20px;
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
 			height: 60px;
 			box-sizing: border-box;
+			border-bottom:  solid #F8E6CD;
 		}
 
 		.logo {
@@ -84,7 +85,7 @@
 		}
 
 		footer {
-			background-color: #44586e;
+			background-color: #333;
 			padding: 8px 20px;
 			text-align: left;
 			color: #fff;
