--- a/bobs.html
+++ b/bobs.html
@@ -44,7 +44,7 @@
 			/* size of the hamburger icon */
 			height: 3px;
 			/* thickness of the hamburger bars */
-			background-color: #44586e;
+			background-color: #333;
 			/* color of the hamburger icon */
 			position: relative;
 			/* needed to position the pseudo-elements */
@@ -57,7 +57,7 @@
 			position: absolute;
 			width: 100%;
 			height: 3px;
-			background-color: #44586e;
+			background-color: #333;
 			transition: transform 0.3s ease;
 		}
 
@@ -97,7 +97,7 @@
 		}
 
 		.selected {
-			background: #eceef1;
+			background: #f5f5f5;
 		}
 
 		.user_story {
