--- a/bobs.html
+++ b/bobs.html
@@ -14,6 +14,7 @@
 			padding: 0;
 			display: flex;
 			flex-direction: column;
+			color: #191714;
 		}
 
 		body {
@@ -85,7 +86,7 @@
 		}
 
 		footer {
-			background-color: #333;
+			background-color: #ECBD75;
 			padding: 8px 20px;
 			text-align: left;
 			color: #fff;
@@ -97,7 +98,7 @@
 		}
 
 		.selected {
-			background: #f5f5f5;
+			background: #F8E6CD;
 		}
 
 		.user_story {
