--- a/bobs.html
+++ b/bobs.html
@@ -5,7 +5,7 @@
 	<script src="https://llmatoz.quiq-api.com/app/chat-ui/index.js" charset="UTF-8"></script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bob's Discount Furniture AI Agent Test Page</title>
+	<title>Bob's Discount Furniture AI Agent</title>
 	<style>
 		html,
 		body {
@@ -20,7 +20,6 @@
 		body {
 			font-family: Arial, sans-serif;
 			display: none;
-			/* Hide content initially */
 		}
 
 		header {
@@ -31,7 +30,7 @@
 			align-items: center;
 			height: 60px;
 			box-sizing: border-box;
-			border-bottom:  solid #F8E6CD;
+			border-bottom: solid #F8E6CD;
 		}
 
 		.logo {
@@ -39,50 +38,41 @@
 			height: auto;
 		}
 
-		.hamburger {
-			display: block;
-			width: 22px;
-			/* size of the hamburger icon */
-			height: 3px;
-			/* thickness of the hamburger bars */
-			background-color: #333;
-			/* color of the hamburger icon */
-			position: relative;
-			/* needed to position the pseudo-elements */
-			transition: background 0.3s ease;
+		.navbar {
+			display: flex;
+			justify-content: center;
+			background-color: #ECBD75;
+			padding: 10px;
+			box-sizing: border-box;
 		}
 
-		.hamburger::before,
-		.hamburger::after {
-			content: '';
-			position: absolute;
-			width: 100%;
-			height: 3px;
-			background-color: #333;
-			transition: transform 0.3s ease;
+		.navbar a {
+			text-decoration: none;
+			color: #fff;
+			padding: 10px 15px;
+			margin: 0 5px;
+			border-radius: 5px;
+			background-color: #191714;
 		}
 
-		.hamburger::before {
-			top: -8px;
+		.navbar a.active {
+			background-color: #F8E6CD;
+			color: #191714;
 		}
-
-		.hamburger::after {
-			top: 8px;
-		}
-
 
 		main {
 			flex: 1;
 			padding: 30px 40px;
-			text-align: left;
 			box-sizing: border-box;
-
 			overflow: auto;
 		}
 
-		#main-div {
-			max-width: 1000px;
-			margin: auto;
+		section {
+			display: none;
+		}
+
+		section.active {
+			display: block;
 		}
 
 		footer {
@@ -91,28 +81,6 @@
 			text-align: left;
 			color: #fff;
 			box-sizing: border-box;
-		}
-
-		li {
-			line-height: 2;
-		}
-
-		.selected {
-			background: #F8E6CD;
-		}
-
-		.user_story {
-			padding: 8px 14px;
-			box-sizing: border-box;
-		}
-
-		.user_story div {
-			text-align: right;
-			padding: 10px;
-		}
-
-		button {
-			padding: 6px 12px;
 		}
 	</style>
 </head>
@@ -129,87 +97,185 @@
 				pageConfigurationId: 'ai-agent-cs'
 			});
 		}
-	</script>
-	<header>
-		<img src="https://www.mybobs.com/assets/bobs-logo.svg" alt="Bob's Discount Furniture Logo" class="logo">
-		<div class="hamburger"></div>
-	</header>
-	<main>
-		<div id="main-div">
-			<h1>AI Agent Testing Page for Bob's Discount Furniture</h1>
-			<p>Welcome to the testing page for the Bob's Discount Furniture AI Agent. Please follow the guidelines below to ensure effective testing:</p>
-			<ul>
-				<li>Verify that the AI responds accurately to customer inquiries.</li>
-				<li>Test the AI's ability to handle unexpected user input.</li>
-				<li>Assess response time for typical customer questions.</li>
-				<li>Check the AI's capability to escalate complex issues to human agents.</li>
-			</ul>
-			<p>
-			<h2>Testing Scenarios for Bob's AI Agent</h2>
-			</p>
-			<hr>
-			<div id="order_details" class="user_story">
-				<h3>Scenario: Inquiry about Order Details</h3>
-				<ul>
-					<li><strong>User Story:</strong> As a customer, I want to check the details of my order so that I can track its status.</li>
-					<li><strong>Context:</strong> Customer has placed an order and wants to know the current status.</li>
-					<li><strong>Initial User Input:</strong> I want to check the status of my order #123456.</li>
-					<li><strong>Potential Escalation Scenarios:</strong> If the order status is unclear or there are issues with the order, escalate to customer support.</li>
-					<li><strong>Expected Resolution:</strong> Provide the customer with the current status of their order, including delivery updates if applicable.</li>
-					<li><strong>Acceptance Criteria:</strong> The customer receives accurate and detailed order status information.</li>
-				</ul>
-				<div>
-					<button onclick="loadContext('order_details')">Load Context</button>
-				</div>
-			</div>
-			<hr>
-			<div id="schedule_delivery" class="user_story">
-				<h3>Scenario: Schedule a Delivery</h3>
-				<ul>
-					<li><strong>User Story:</strong> As a customer, I want to schedule my furniture delivery so that I can plan my day.</li>
-					<li><strong>Context:</strong> Customer needs to select a delivery date and time window.</li>
-					<li><strong>Initial User Input:</strong> I would like to schedule my delivery for next week.</li>
-					<li><strong>Potential Escalation Scenarios:</strong> If the preferred date or time is unavailable, escalate to a delivery specialist.</li>
-					<li><strong>Expected Resolution:</strong> Customer successfully schedules their delivery with confirmation of the date and time window.</li>
-					<li><strong>Acceptance Criteria:</strong> Customer receives confirmation of their scheduled delivery, including any special instructions.</li>
-				</ul>
-				<div>
-					<button onclick="loadContext('schedule_delivery')">Load Context</button>
-				</div>
-			</div>
-			<hr>
-			<div id="special_request" class="user_story">
-				<h3>Scenario: Special Delivery Instructions</h3>
-				<ul>
-					<li><strong>User Story:</strong> As a customer, I want to provide special instructions for my delivery so that it goes smoothly.</li>
-					<li><strong>Context:</strong> Customer needs to communicate specific requirements for their delivery.</li>
-					<li><strong>Initial User Input:</strong> Please ensure delivery is made through the back entrance.</li>
-					<li><strong>Potential Escalation Scenarios:</strong> If the special request cannot be accommodated, escalate to a delivery specialist.</li>
-					<li><strong>Expected Resolution:</strong> Special instructions are added to the delivery details, and the customer receives confirmation.</li>
-					<li><strong>Acceptance Criteria:</strong> Customer successfully provides special instructions, and they are acknowledged and confirmed.</li>
-				</ul>
-				<div>
-					<button onclick="loadContext('special_request')">Load Context</button>
-				</div>
-			</div>
-		</div>
-	</main>
-	<script>
-		function loadContext(hash) {
-			if (history.pushState) {
-				var newUrl = window.location.href.split('#')[0] + '#' + hash;
-				window.history.pushState({ path: newUrl }, '', newUrl);
-			} else {
-				window.location.hash = hash;
-			}
-			const stories = document.querySelectorAll('.user_story');
-			for (let e of stories) {
-				e.classList.remove('selected');
-			}
-			document.getElementById(hash).classList.add('selected');
-			chat.setChatRegistrationField('schema.conversation.custom.aiAgentFixture', hash);
+
+		function toggleSection(sectionId) {
+			const sections = document.querySelectorAll('section');
+			const navLinks = document.querySelectorAll('.navbar a');
+			sections.forEach(section => section.classList.remove('active'));
+			navLinks.forEach(link => link.classList.remove('active'));
+			document.getElementById(sectionId).classList.add('active');
+			document.querySelector(`a[href="#${sectionId}"]`).classList.add('active');
 		}
 	</script>
+
+	<header>
+		<img src="https://www.mybobs.com/assets/bobs-logo.svg" alt="Bob's Discount Furniture Logo" class="logo">
+	</header>
+
+	<div class="navbar">
+		<a href="#overview" onclick="toggleSection('overview')" class="active">Overview</a>
+		<a href="#topics" onclick="toggleSection('topics')">Topics</a>
+		<a href="#journey-stages" onclick="toggleSection('journey-stages')">Journey Stages</a>
+		<a href="#guides" onclick="toggleSection('guides')">Guides</a>
+		<a href="#tools" onclick="toggleSection('tools')">Tools</a>
+		<a href="#measure" onclick="toggleSection('measure')">Measure</a>
+		<a href="#improve" onclick="toggleSection('improve')">Improve</a>
+		<a href="#test" onclick="toggleSection('overview')" class="active">Overview</a>
+
+	</div>
+
+	<main>
+		<section id="overview" class="active">
+			<h1>Overview</h1>
+			<p>Welcome to the Bob's Discount Furniture AI Agent Page. Navigate through the sections to explore Topics, Journey Stages, Guides, Tools, and more.</p>
+			<div id="main-div">
+				<h1></h1>
+				<p>Welcome to the testing page for the Bob's Discount Furniture AI Agent. Please follow the guidelines below to ensure effective testing:</p>
+				<ul>
+					<li>Verify that the AI responds accurately to customer inquiries.</li>
+					<li>Test the AI's ability to handle unexpected user input.</li>
+					<li>Assess response time for typical customer questions.</li>
+					<li>Check the AI's capability to escalate complex issues to human agents.</li>
+				</ul>
+				<p>
+				<h2>Testing Scenarios for Bob's AI Agent</h2>
+				</p>
+				<hr>
+				<div id="order_details" class="user_story">
+					<h3>Scenario: Inquiry about Order Details</h3>
+					<ul>
+						<li><strong>User Story:</strong> As a customer, I want to check the details of my order so that I can track its status.</li>
+						<li><strong>Context:</strong> Customer has placed an order and wants to know the current status.</li>
+						<li><strong>Initial User Input:</strong> I want to check the status of my order #123456.</li>
+						<li><strong>Potential Escalation Scenarios:</strong> If the order status is unclear or there are issues with the order, escalate to customer support.</li>
+						<li><strong>Expected Resolution:</strong> Provide the customer with the current status of their order, including delivery updates if applicable.</li>
+						<li><strong>Acceptance Criteria:</strong> The customer receives accurate and detailed order status information.</li>
+					</ul>
+					<div>
+						<button onclick="loadContext('order_details')">Load Context</button>
+					</div>
+				</div>
+				<hr>
+				<div id="schedule_delivery" class="user_story">
+					<h3>Scenario: Schedule a Delivery</h3>
+					<ul>
+						<li><strong>User Story:</strong> As a customer, I want to schedule my furniture delivery so that I can plan my day.</li>
+						<li><strong>Context:</strong> Customer needs to select a delivery date and time window.</li>
+						<li><strong>Initial User Input:</strong> I would like to schedule my delivery for next week.</li>
+						<li><strong>Potential Escalation Scenarios:</strong> If the preferred date or time is unavailable, escalate to a delivery specialist.</li>
+						<li><strong>Expected Resolution:</strong> Customer successfully schedules their delivery with confirmation of the date and time window.</li>
+						<li><strong>Acceptance Criteria:</strong> Customer receives confirmation of their scheduled delivery, including any special instructions.</li>
+					</ul>
+					<div>
+						<button onclick="loadContext('schedule_delivery')">Load Context</button>
+					</div>
+				</div>
+				<hr>
+				<div id="special_request" class="user_story">
+					<h3>Scenario: Special Delivery Instructions</h3>
+					<ul>
+						<li><strong>User Story:</strong> As a customer, I want to provide special instructions for my delivery so that it goes smoothly.</li>
+						<li><strong>Context:</strong> Customer needs to communicate specific requirements for their delivery.</li>
+						<li><strong>Initial User Input:</strong> Please ensure delivery is made through the back entrance.</li>
+						<li><strong>Potential Escalation Scenarios:</strong> If the special request cannot be accommodated, escalate to a delivery specialist.</li>
+						<li><strong>Expected Resolution:</strong> Special instructions are added to the delivery details, and the customer receives confirmation.</li>
+						<li><strong>Acceptance Criteria:</strong> Customer successfully provides special instructions, and they are acknowledged and confirmed.</li>
+					</ul>
+					<div>
+						<button onclick="loadContext('special_request')">Load Context</button>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="topics">
+			<h1>Topics</h1>
+			<p>Here you'll find information about different customer service topics.</p>
+			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="topics" border="0">
+			<ul>
+				<li>
+					<strong>Product Information Requests:</strong> General questions about furniture specifications such as dimensions, materials, and care instructions.
+				</li>
+				<li>
+					<strong>Order Placement Assistance:</strong> Specific requests for help with placing an order through the website or in-store.
+				</li>
+				<li>
+					<strong>Order, Delivery, and Service Status Updates:</strong> Customers checking the status of their order, including shipping and delivery timelines.
+				</li>
+				<li>
+					<strong>Delivery Scheduling:</strong> Assistance with scheduling or rescheduling delivery dates and understanding delivery options.
+				</li>
+				<li>
+					<strong>Order Modifications:</strong> Customer requests for modifying existing orders, such as changing color, size, or quantity.
+				</li>
+				<li>
+					<strong>Product Availability Checks:</strong> Inquiries about the availability of specific items, including wait times for out-of-stock products.
+				</li>
+				<li>
+					<strong>Return and Exchange Inquiries:</strong> Assist customers with the process for returning or exchanging items, and understanding associated policies.
+				</li>
+				<li>
+					<strong>Warranty Service Requests:</strong> Questions about warranty terms and requests for service under warranty conditions.
+				</li>
+				<li>
+					<strong>Refund Processes:</strong> Inquiries on how to request refunds for returned items or orders canceled by the customer or due to inventory issues.
+				</li>
+				<li>
+					<strong>Assembly Instructions:</strong> Questions about assembly of furniture items, availability of assembly services, and troubleshooting assembly problems.
+				</li>
+				<li>
+					<strong>Promotions and Discounts:</strong> Information about current promotions, sales events, and eligibility for discounts.
+				</li>
+				<li>
+					<strong>Payment and Billing Issues:</strong> Help with issues related to payments, billing errors, or financing options.
+				</li>
+				<li>
+					<strong>Website Navigation Help:</strong> Assistance with navigating the online store, using features like wish lists and product comparisons.
+				</li>
+				<li>
+					<strong>Customer Feedback and Complaints:</strong> Providing a channel for customer feedback or filing complaints about their shopping experience.
+				</li>
+				<li>
+					<strong>Store Pickup Inquiries:</strong> Help with managing online customer accounts, password recovery, and updating personal information.
+				</li>
+			</ul>
+		</section>
+		
+		<section id="topics">
+			<h1>Topics</h1>
+			<p>Here you'll find information about different customer service topics.</p>
+			<img src="topics-icon.png" alt="Topics Icon" />
+		</section>
+
+		<section id="journey-stages">
+			<h1>Journey Stages</h1>
+			<p>Explore the stages of the customer journey and how our AI assists at each stage.</p>
+			<img src="journey-stages-icon.png" alt="Journey Stages Icon" />
+		</section>
+
+		<section id="guides">
+			<h1>Guides</h1>
+			<p>Discover the guides that provide step-by-step assistance for our customer service agents.</p>
+			<img src="guides-icon.png" alt="Guides Icon" />
+		</section>
+
+		<section id="tools">
+			<h1>Tools</h1>
+			<p>Learn about the tools that enhance customer interactions and streamline processes.</p>
+			<img src="tools-icon.png" alt="Tools Icon" />
+		</section>
+
+		<section id="measure">
+			<h1>Measure</h1>
+			<p>Understand how we evaluate AI performance and customer satisfaction.</p>
+			<img src="ai-performance-icon.png" alt="AI Performance Icon" />
+		</section>
+
+		<section id="improve">
+			<h1>Improve</h1>
+			<p>Learn about the continuous improvement efforts to optimize our customer service experiences.</p>
+			<img src="improve-icon.png" alt="Improve Icon" />
+		</section>
+	</main>
 
 	<footer>
 		<p>&copy; AI Agent powered by <strong>Quiq</strong></p>
