--- a/bobs.html
+++ b/bobs.html
@@ -40,7 +40,7 @@
 
 		.navbar {
 			display: flex;
-			justify-content: center;
+			justify-content: start;
 			background-color: #ECBD75;
 			padding: 10px;
 			box-sizing: border-box;
@@ -52,7 +52,6 @@
 			padding: 10px 15px;
 			margin: 0 5px;
 			border-radius: 5px;
-			background-color: #191714;
 		}
 
 		.navbar a.active {
@@ -81,6 +80,13 @@
 			text-align: left;
 			color: #fff;
 			box-sizing: border-box;
+		}
+
+		main img {
+			height: 122px;
+			border-radius: 20px;
+			float: right;
+			margin: 22px;
 		}
 	</style>
 </head>
@@ -191,55 +197,54 @@
 			<h1>Topics</h1>
 			<p>Here you'll find information about different customer service topics.</p>
 			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="topics" border="0">
-			<ul>
-				<li>
-					<strong>Product Information Requests:</strong> General questions about furniture specifications such as dimensions, materials, and care instructions.
-				</li>
-				<li>
-					<strong>Order Placement Assistance:</strong> Specific requests for help with placing an order through the website or in-store.
-				</li>
-				<li>
-					<strong>Order, Delivery, and Service Status Updates:</strong> Customers checking the status of their order, including shipping and delivery timelines.
-				</li>
-				<li>
-					<strong>Delivery Scheduling:</strong> Assistance with scheduling or rescheduling delivery dates and understanding delivery options.
-				</li>
-				<li>
-					<strong>Order Modifications:</strong> Customer requests for modifying existing orders, such as changing color, size, or quantity.
-				</li>
-				<li>
-					<strong>Product Availability Checks:</strong> Inquiries about the availability of specific items, including wait times for out-of-stock products.
-				</li>
-				<li>
-					<strong>Return and Exchange Inquiries:</strong> Assist customers with the process for returning or exchanging items, and understanding associated policies.
-				</li>
-				<li>
-					<strong>Warranty Service Requests:</strong> Questions about warranty terms and requests for service under warranty conditions.
-				</li>
-				<li>
-					<strong>Refund Processes:</strong> Inquiries on how to request refunds for returned items or orders canceled by the customer or due to inventory issues.
-				</li>
-				<li>
-					<strong>Assembly Instructions:</strong> Questions about assembly of furniture items, availability of assembly services, and troubleshooting assembly problems.
-				</li>
-				<li>
-					<strong>Promotions and Discounts:</strong> Information about current promotions, sales events, and eligibility for discounts.
-				</li>
-				<li>
-					<strong>Payment and Billing Issues:</strong> Help with issues related to payments, billing errors, or financing options.
-				</li>
-				<li>
-					<strong>Website Navigation Help:</strong> Assistance with navigating the online store, using features like wish lists and product comparisons.
-				</li>
-				<li>
-					<strong>Customer Feedback and Complaints:</strong> Providing a channel for customer feedback or filing complaints about their shopping experience.
-				</li>
-				<li>
-					<strong>Store Pickup Inquiries:</strong> Help with managing online customer accounts, password recovery, and updating personal information.
-				</li>
-			</ul>
+
+			<h3>Product Information Requests</h3>
+			<p>General questions about furniture specifications such as dimensions, materials, and care instructions.</p>
+
+			<h3>Order Placement Assistance</h3>
+			<p>Specific requests for help with placing an order through the website or in-store.</p>
+
+			<h3>Order, Delivery, and Service Status Updates</h3>
+			<p>Customers checking the status of their order, including shipping and delivery timelines.</p>
+
+			<h3>Delivery Scheduling</h3>
+			<p>Assistance with scheduling or rescheduling delivery dates and understanding delivery options.</p>
+
+			<h3>Order Modifications</h3>
+			<p>Customer requests for modifying existing orders, such as changing color, size, or quantity.</p>
+
+			<h3>Product Availability Checks</h3>
+			<p>Inquiries about the availability of specific items, including wait times for out-of-stock products.</p>
+
+			<h3>Return and Exchange Inquiries</h3>
+			<p>Assist customers with the process for returning or exchanging items, and understanding associated policies.</p>
+
+			<h3>Warranty Service Requests</h3>
+			<p>Questions about warranty terms and requests for service under warranty conditions.</p>
+
+			<h3>Refund Processes</h3>
+			<p>Inquiries on how to request refunds for returned items or orders canceled by the customer or due to inventory issues.</p>
+
+			<h3>Assembly Instructions</h3>
+			<p>Questions about assembly of furniture items, availability of assembly services, and troubleshooting assembly problems.</p>
+
+			<h3>Promotions and Discounts</h3>
+			<p>Information about current promotions, sales events, and eligibility for discounts.</p>
+
+			<h3>Payment and Billing Issues</h3>
+			<p>Help with issues related to payments, billing errors, or financing options.</p>
+
+			<h3>Website Navigation Help</h3>
+			<p>Assistance with navigating the online store, using features like wish lists and product comparisons.</p>
+
+			<h3>Customer Feedback and Complaints</h3>
+			<p>Providing a channel for customer feedback or filing complaints about their shopping experience.</p>
+
+			<h3>Store Pickup Inquiries</h3>
+			<p>Help with managing online customer accounts, password recovery, and updating personal information.</p>
+
 		</section>
-		
+
 		<section id="topics">
 			<h1>Topics</h1>
 			<p>Here you'll find information about different customer service topics.</p>
