--- a/bobs.html
+++ b/bobs.html
@@ -82,11 +82,23 @@
 			box-sizing: border-box;
 		}
 
-		main img {
-			height: 122px;
+		.section-img {
+			height: 188px;
 			border-radius: 20px;
 			float: right;
-			margin: 22px;
+			margin: 0 22px;
+		}
+		.inline-img {
+			height: 188px;
+			border-radius: 20px;
+			float: right;
+			margin: 0 22px;
+		}
+		.full-img {
+			height: 188px;
+			border-radius: 20px;
+			float: right;
+			margin: 0 22px;
 		}
 	</style>
 </head>
@@ -132,8 +144,101 @@
 
 	<main>
 		<section id="overview" class="active">
+			<img src="https://i.ibb.co/KszHcvp/overview.png" alt="overview" border="0" class="full-img">
 			<h1>Overview</h1>
 			<p>Welcome to the Bob's Discount Furniture AI Agent Page. Navigate through the sections to explore Topics, Journey Stages, Guides, Tools, and more.</p>
+			
+			<img src="https://i.ibb.co/njWpPr9/agent.png" alt="agent" border="0" class="inline-img">
+			<img src="https://i.ibb.co/2k3W0LG/robot.png" alt="robot" border="0" class="inline-img">
+		</section>
+		<section id="topics">
+			<h1>Topics</h1>
+			<p>Here you'll find information about different customer service topics.</p>
+			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="topics" border="0">
+
+			<h3>Product Information Requests</h3>
+			<p>General questions about furniture specifications such as dimensions, materials, and care instructions.</p>
+
+			<h3>Order Placement Assistance</h3>
+			<p>Specific requests for help with placing an order through the website or in-store.</p>
+
+			<h3>Order, Delivery, and Service Status Updates</h3>
+			<p>Customers checking the status of their order, including shipping and delivery timelines.</p>
+
+			<h3>Delivery Scheduling</h3>
+			<p>Assistance with scheduling or rescheduling delivery dates and understanding delivery options.</p>
+
+			<h3>Order Modifications</h3>
+			<p>Customer requests for modifying existing orders, such as changing color, size, or quantity.</p>
+
+			<h3>Product Availability Checks</h3>
+			<p>Inquiries about the availability of specific items, including wait times for out-of-stock products.</p>
+
+			<h3>Return and Exchange Inquiries</h3>
+			<p>Assist customers with the process for returning or exchanging items, and understanding associated policies.</p>
+
+			<h3>Warranty Service Requests</h3>
+			<p>Questions about warranty terms and requests for service under warranty conditions.</p>
+
+			<h3>Refund Processes</h3>
+			<p>Inquiries on how to request refunds for returned items or orders canceled by the customer or due to inventory issues.</p>
+
+			<h3>Assembly Instructions</h3>
+			<p>Questions about assembly of furniture items, availability of assembly services, and troubleshooting assembly problems.</p>
+
+			<h3>Promotions and Discounts</h3>
+			<p>Information about current promotions, sales events, and eligibility for discounts.</p>
+
+			<h3>Payment and Billing Issues</h3>
+			<p>Help with issues related to payments, billing errors, or financing options.</p>
+
+			<h3>Website Navigation Help</h3>
+			<p>Assistance with navigating the online store, using features like wish lists and product comparisons.</p>
+
+			<h3>Customer Feedback and Complaints</h3>
+			<p>Providing a channel for customer feedback or filing complaints about their shopping experience.</p>
+
+			<h3>Store Pickup Inquiries</h3>
+			<p>Help with managing online customer accounts, password recovery, and updating personal information.</p>
+
+		</section>
+
+		<section id="topics">
+			<h1>Topics</h1>
+			<p>Here you'll find information about different customer service topics.</p>
+			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="Topics Icon" class="section-img"/>
+		</section>
+
+		<section id="journey-stages">
+			<h1>Journey Stages</h1>
+			<p>Explore the stages of the customer journey and how our AI assists at each stage.</p>
+			<img src="https://i.ibb.co/2NVFCP8/journey.png" alt="Journey Stages Icon" class="section-img"/>
+		</section>
+
+		<section id="guides">
+			<h1>Guides</h1>
+			<p>Discover the guides that provide step-by-step assistance for our customer service agents.</p>
+			<img src="https://i.ibb.co/DRRg5Hz/guides.png" alt="Guides Icon" class="section-img"/>
+		</section>
+
+		<section id="tools">
+			<h1>Tools</h1>
+			<p>Learn about the tools that enhance customer interactions and streamline processes.</p>
+			<img src="https://i.ibb.co/rkgVdhp/tools.png" alt="Tools Icon" class="section-img"/>
+		</section>
+
+		<section id="measure">
+			<h1>Measure</h1>
+			<p>Understand how we evaluate AI performance and customer satisfaction.</p>
+			<img src="https://i.ibb.co/XCfqNns/performance.png" alt="AI Performance Icon" class="section-img"/>
+		</section>
+
+		<section id="improve">
+			<h1>Improve</h1>
+			<p>Learn about the continuous improvement efforts to optimize our customer service experiences.</p>
+			<img src="https://i.ibb.co/sVX1PFd/testing.png" alt="Improve Icon" class="section-img"/>
+		
+			
 			<div id="main-div">
 				<h1></h1>
 				<p>Welcome to the testing page for the Bob's Discount Furniture AI Agent. Please follow the guidelines below to ensure effective testing:</p>
@@ -193,93 +298,7 @@
 				</div>
 			</div>
 		</section>
-		<section id="topics">
-			<h1>Topics</h1>
-			<p>Here you'll find information about different customer service topics.</p>
-			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="topics" border="0">
 
-			<h3>Product Information Requests</h3>
-			<p>General questions about furniture specifications such as dimensions, materials, and care instructions.</p>
-
-			<h3>Order Placement Assistance</h3>
-			<p>Specific requests for help with placing an order through the website or in-store.</p>
-
-			<h3>Order, Delivery, and Service Status Updates</h3>
-			<p>Customers checking the status of their order, including shipping and delivery timelines.</p>
-
-			<h3>Delivery Scheduling</h3>
-			<p>Assistance with scheduling or rescheduling delivery dates and understanding delivery options.</p>
-
-			<h3>Order Modifications</h3>
-			<p>Customer requests for modifying existing orders, such as changing color, size, or quantity.</p>
-
-			<h3>Product Availability Checks</h3>
-			<p>Inquiries about the availability of specific items, including wait times for out-of-stock products.</p>
-
-			<h3>Return and Exchange Inquiries</h3>
-			<p>Assist customers with the process for returning or exchanging items, and understanding associated policies.</p>
-
-			<h3>Warranty Service Requests</h3>
-			<p>Questions about warranty terms and requests for service under warranty conditions.</p>
-
-			<h3>Refund Processes</h3>
-			<p>Inquiries on how to request refunds for returned items or orders canceled by the customer or due to inventory issues.</p>
-
-			<h3>Assembly Instructions</h3>
-			<p>Questions about assembly of furniture items, availability of assembly services, and troubleshooting assembly problems.</p>
-
-			<h3>Promotions and Discounts</h3>
-			<p>Information about current promotions, sales events, and eligibility for discounts.</p>
-
-			<h3>Payment and Billing Issues</h3>
-			<p>Help with issues related to payments, billing errors, or financing options.</p>
-
-			<h3>Website Navigation Help</h3>
-			<p>Assistance with navigating the online store, using features like wish lists and product comparisons.</p>
-
-			<h3>Customer Feedback and Complaints</h3>
-			<p>Providing a channel for customer feedback or filing complaints about their shopping experience.</p>
-
-			<h3>Store Pickup Inquiries</h3>
-			<p>Help with managing online customer accounts, password recovery, and updating personal information.</p>
-
-		</section>
-
-		<section id="topics">
-			<h1>Topics</h1>
-			<p>Here you'll find information about different customer service topics.</p>
-			<img src="topics-icon.png" alt="Topics Icon" />
-		</section>
-
-		<section id="journey-stages">
-			<h1>Journey Stages</h1>
-			<p>Explore the stages of the customer journey and how our AI assists at each stage.</p>
-			<img src="journey-stages-icon.png" alt="Journey Stages Icon" />
-		</section>
-
-		<section id="guides">
-			<h1>Guides</h1>
-			<p>Discover the guides that provide step-by-step assistance for our customer service agents.</p>
-			<img src="guides-icon.png" alt="Guides Icon" />
-		</section>
-
-		<section id="tools">
-			<h1>Tools</h1>
-			<p>Learn about the tools that enhance customer interactions and streamline processes.</p>
-			<img src="tools-icon.png" alt="Tools Icon" />
-		</section>
-
-		<section id="measure">
-			<h1>Measure</h1>
-			<p>Understand how we evaluate AI performance and customer satisfaction.</p>
-			<img src="ai-performance-icon.png" alt="AI Performance Icon" />
-		</section>
-
-		<section id="improve">
-			<h1>Improve</h1>
-			<p>Learn about the continuous improvement efforts to optimize our customer service experiences.</p>
-			<img src="improve-icon.png" alt="Improve Icon" />
-		</section>
 	</main>
 
 	<footer>
