--- a/bobs.html
+++ b/bobs.html
@@ -138,7 +138,7 @@
 		<a href="#tools" onclick="toggleSection('tools')">Tools</a>
 		<a href="#measure" onclick="toggleSection('measure')">Measure</a>
 		<a href="#improve" onclick="toggleSection('improve')">Improve</a>
-		<a href="#test" onclick="toggleSection('overview')" class="active">Overview</a>
+		<a href="#test" onclick="toggleSection('test')">Test</a>
 
 	</div>
 
