--- a/bobs.html
+++ b/bobs.html
@@ -89,15 +89,13 @@
 			margin: 0 22px;
 		}
 		.inline-img {
-			height: 188px;
+			width: 32%;
 			border-radius: 20px;
-			float: right;
 			margin: 0 22px;
 		}
 		.full-img {
-			height: 188px;
+			width: 68%;
 			border-radius: 20px;
-			float: right;
 			margin: 0 22px;
 		}
 	</style>
@@ -150,6 +148,8 @@
 			
 			<img src="https://i.ibb.co/njWpPr9/agent.png" alt="agent" border="0" class="inline-img">
 			<img src="https://i.ibb.co/2k3W0LG/robot.png" alt="robot" border="0" class="inline-img">
+			<img src="https://i.ibb.co/cLhznT8/sales-agent.png" alt="agent" border="0" class="inline-img">
+			<img src="https://i.ibb.co/18mP8rX/care-agent.png" alt="robot" border="0" class="inline-img">
 		</section>
 		<section id="topics">
 			<h1>Topics</h1>
@@ -205,39 +205,39 @@
 
 		<section id="topics">
 			<h1>Topics</h1>
-			<p>Here you'll find information about different customer service topics.</p>
 			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="Topics Icon" class="section-img"/>
+			<p>Here you'll find information about different customer service topics.</p>
 		</section>
 
 		<section id="journey-stages">
 			<h1>Journey Stages</h1>
-			<p>Explore the stages of the customer journey and how our AI assists at each stage.</p>
 			<img src="https://i.ibb.co/2NVFCP8/journey.png" alt="Journey Stages Icon" class="section-img"/>
+			<p>Explore the stages of the customer journey and how our AI assists at each stage.</p>
 		</section>
 
 		<section id="guides">
 			<h1>Guides</h1>
-			<p>Discover the guides that provide step-by-step assistance for our customer service agents.</p>
 			<img src="https://i.ibb.co/DRRg5Hz/guides.png" alt="Guides Icon" class="section-img"/>
+			<p>Discover the guides that provide step-by-step assistance for our customer service agents.</p>
 		</section>
 
 		<section id="tools">
 			<h1>Tools</h1>
-			<p>Learn about the tools that enhance customer interactions and streamline processes.</p>
 			<img src="https://i.ibb.co/rkgVdhp/tools.png" alt="Tools Icon" class="section-img"/>
+			<p>Learn about the tools that enhance customer interactions and streamline processes.</p>
 		</section>
 
 		<section id="measure">
 			<h1>Measure</h1>
-			<p>Understand how we evaluate AI performance and customer satisfaction.</p>
 			<img src="https://i.ibb.co/XCfqNns/performance.png" alt="AI Performance Icon" class="section-img"/>
+			<p>Understand how we evaluate AI performance and customer satisfaction.</p>
 		</section>
 
 		<section id="improve">
 			<h1>Improve</h1>
-			<p>Learn about the continuous improvement efforts to optimize our customer service experiences.</p>
 			<img src="https://i.ibb.co/sVX1PFd/testing.png" alt="Improve Icon" class="section-img"/>
-		
+			<p>Learn about the continuous improvement efforts to optimize our customer service experiences.</p>
+			
 			
 			<div id="main-div">
 				<h1></h1>
