--- a/bobs.html
+++ b/bobs.html
@@ -174,6 +174,23 @@
 				Understanding the user stage enables the AI to provide tailored responses and proactively address potential concerns.</p>
 		</section>
 
+		<section id="topics">
+			<h1>Topics</h1>
+			<img src="https://i.ibb.co/DRRg5Hz/guides.png" alt="Topics Icon" class="section-img"/>
+			<p>The AI classifies inquiries into well-differentiated Topics to streamline responses and guide users effectively. Key topics include:
+
+				- Product Information Requests: Specifications, dimensions, and materials.
+				- Order Placement Assistance: Support with purchasing furniture.
+				- Delivery Scheduling: Coordination of delivery dates and times.
+				- Order Modifications: Changes to color, size, or quantity.
+				- Return and Exchange Inquiries: Policies and processes for returns.
+				- Warranty Service Requests: Repairs or replacements under warranty.
+				- Payment and Billing Issues: Financing, payment errors, and disputes.
+				- Customer Feedback and Complaints: Logging feedback or addressing complaints.
+				
+			 These topics allow the AI to quickly categorize and address customer inquiries, providing a structured approach to problem-solving.</p>
+		</section>
+	
 		<section id="guides">
 			<h1>Guides</h1>
 			<img src="https://i.ibb.co/DRRg5Hz/guides.png" alt="Guides Icon" class="section-img"/>
