--- a/bobs.html
+++ b/bobs.html
@@ -158,25 +158,25 @@
 			<img src="https://i.ibb.co/18mP8rX/care-agent.png" alt="robot" border="0" class="inline-img">
 			<p>The AI first classifies inquiries into one of two primary groups: Sales or Service. Sales inquiries encompass requests for assistance with purchasing new furniture, understanding promotions, and customizing orders. Service inquiries cover post-purchase needs such as delivery status, rescheduling, warranty claims, or product issues. By distinguishing between these two groups, the AI ensures that the inquiry is routed to the appropriate team or handled autonomously where applicable. This differentiation allows the system to address user needs more effectively while aligning with the organizational structure.</p>
 		</section>
-
+		
 		<section id="journey-stages">
 			<h1>Journey Stages</h1>
 			<img src="https://i.ibb.co/2NVFCP8/journey.png" alt="Journey Stages Icon" class="section-img"/>
-			<p>The AI further refines its understanding of the inquiry by identifying the user's stage in the Customer Journey. These stages include:
-
-				- Pre-Purchase: Customers exploring product details, availability, or promotions.
-				- Pre-Delivery Scheduling: Customers who have purchased and need to arrange delivery.
-				- Delivery Scheduled: Customers confirming or preparing for their scheduled delivery.
-				- Day of Delivery: Real-time coordination and tracking on the delivery day.
-				- Recently Delivered: Assistance with immediate post-delivery needs such as assembly or damages.
-				- Furniture in the Home: Long-term inquiries about care, warranty, or recycling.
-
-				Understanding the user stage enables the AI to provide tailored responses and proactively address potential concerns.</p>
+			<p>The AI further refines its understanding of the inquiry by identifying the user's stage in the Customer Journey. These stages include:</p>
+			<ul>
+				<li><strong>Pre-Purchase:</strong> Customers exploring product details, availability, or promotions.</li>
+				<li><strong>Pre-Delivery Scheduling:</strong> Customers who have purchased and need to arrange delivery.</li>
+				<li><strong>Delivery Scheduled:</strong> Customers confirming or preparing for their scheduled delivery.</li>
+				<li><strong>Day of Delivery:</strong> Real-time coordination and tracking on the delivery day.</li>
+				<li><strong>Recently Delivered:</strong> Assistance with immediate post-delivery needs such as assembly or damages.</li>
+				<li><strong>Furniture in the Home:</strong> Long-term inquiries about care, warranty, or recycling.</li>
+			</ul>
+			<p>Understanding the user stage enables the AI to provide tailored responses and proactively address potential concerns.</p>
 		</section>
 
 		<section id="topics">
 			<h1>Topics</h1>
-			<img src="https://i.ibb.co/DRRg5Hz/guides.png" alt="Topics Icon" class="section-img"/>
+			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="Topics Icon" class="section-img"/>
 			<p>The AI classifies inquiries into well-differentiated Topics to streamline responses and guide users effectively. Key topics include:
 
 				- Product Information Requests: Specifications, dimensions, and materials.
