--- a/bobs.html
+++ b/bobs.html
@@ -130,7 +130,7 @@
 
 	<div class="navbar">
 		<a href="#overview" onclick="toggleSection('overview')" class="active">Overview</a>
-		<a href="#primary-groups" onclick="toggleSection('primary-groups')">Test</a>
+		<a href="#primary-groups" onclick="toggleSection('primary-groups')">Primary Groups</a>
 		<a href="#topics" onclick="toggleSection('topics')">Topics</a>
 		<a href="#journey-stages" onclick="toggleSection('journey-stages')">Journey Stages</a>
 		<a href="#guides" onclick="toggleSection('guides')">Guides</a>
@@ -145,17 +145,14 @@
 		<section id="overview" class="active">
 			<img src="https://i.ibb.co/KszHcvp/overview.png" alt="overview" border="0" class="full-img">
 			<h1>Overview</h1>
-			<p>The cognitive architecture for Bob's Discount Furniture AI agent is designed to enhance the customer experience by structuring interactions around a well-defined hierarchy. The care group comprises two primary teams—Sales and Service—supported by an AI agent that serves as a concierge and automation assistant. The AI is empowered to address user inquiries, streamline processes, and ensure seamless interactions across various customer journeys. This ontology integrates the primary groups, user stages, topics, guides, tools, and measures to create a unified, efficient, and adaptive system.</p>
-			
-			<img src="https://i.ibb.co/njWpPr9/agent.png" alt="agent" border="0" class="inline-img">
-			<img src="https://i.ibb.co/2k3W0LG/robot.png" alt="robot" border="0" class="inline-img">
-			
+			<p>The cognitive architecture for Bob's Discount Furniture AI agent is designed to enhance the customer experience by structuring interactions around a well-defined hierarchy. The care group comprises two primary teams—Sales and Service—supported by an AI agent that serves as a concierge and automation assistant. The AI is empowered to address user inquiries, streamline processes, and ensure seamless interactions across various customer journeys. This ontology integrates the primary groups, user stages, topics, guides, tools, and measures to create a unified, efficient, and adaptive system.</p>			
 		</section>
 		
 		<section id="primary-groups">
 			<h1>Primary Groups</h1>
 			<img src="https://i.ibb.co/cLhznT8/sales-agent.png" alt="agent" border="0" class="inline-img">
 			<img src="https://i.ibb.co/18mP8rX/care-agent.png" alt="robot" border="0" class="inline-img">
+			<img src="https://i.ibb.co/2k3W0LG/robot.png" alt="robot" border="0" class="inline-img">
 			<p>The AI first classifies inquiries into one of two primary groups: Sales or Service. Sales inquiries encompass requests for assistance with purchasing new furniture, understanding promotions, and customizing orders. Service inquiries cover post-purchase needs such as delivery status, rescheduling, warranty claims, or product issues. By distinguishing between these two groups, the AI ensures that the inquiry is routed to the appropriate team or handled autonomously where applicable. This differentiation allows the system to address user needs more effectively while aligning with the organizational structure.</p>
 		</section>
 		
