--- a/bobs.html
+++ b/bobs.html
@@ -15,6 +15,9 @@
 			display: flex;
 			flex-direction: column;
 			color: #191714;
+			font-size: 18px;
+    		font-family: system-ui;
+    		line-height: 1.5;
 		}
 
 		body {
@@ -94,9 +97,10 @@
 			margin: 0 22px;
 		}
 		.full-img {
-			width: 68%;
+			width: 44%;
 			border-radius: 20px;
 			margin: 0 22px;
+			float: right;
 		}
 	</style>
 </head>
