--- a/bobs.html
+++ b/bobs.html
@@ -16,8 +16,8 @@
 			flex-direction: column;
 			color: #191714;
 			font-size: 18px;
-    		font-family: system-ui;
-    		line-height: 1.5;
+			font-family: system-ui;
+			line-height: 1.5;
 		}
 
 		body {
@@ -45,8 +45,9 @@
 			display: flex;
 			justify-content: start;
 			background-color: #ECBD75;
-			padding: 10px;
+			padding: 6px;
 			box-sizing: border-box;
+			height: 58px;
 		}
 
 		.navbar a {
@@ -91,17 +92,20 @@
 			float: right;
 			margin: 0 22px;
 		}
+
 		.inline-img {
-			width: 32%;
+			width: 22%;
 			border-radius: 20px;
 			margin: 0 22px;
 		}
+
 		.full-img {
 			width: 44%;
 			border-radius: 20px;
 			margin: 0 22px;
 			float: right;
 		}
+
 		p {
 			max-width: 1028px;
 		}
@@ -152,9 +156,9 @@
 		<section id="overview" class="active">
 			<img src="https://i.ibb.co/KszHcvp/overview.png" alt="overview" border="0" class="full-img">
 			<h1>Overview</h1>
-			<p>The cognitive architecture for Bob's Discount Furniture AI agent is designed to enhance the customer experience by structuring interactions around a well-defined hierarchy. The care group comprises two primary teams—Sales and Service—supported by an AI agent that serves as a concierge and automation assistant. The AI is empowered to address user inquiries, streamline processes, and ensure seamless interactions across various customer journeys. This ontology integrates the primary groups, user stages, topics, guides, tools, and measures to create a unified, efficient, and adaptive system.</p>			
+			<p>The cognitive architecture for Bob's Discount Furniture AI agent is designed to enhance the customer experience by structuring interactions around a well-defined hierarchy. The care group comprises two primary teams—Sales and Service—supported by an AI agent that serves as a concierge and automation assistant. The AI is empowered to address user inquiries, streamline processes, and ensure seamless interactions across various customer journeys. This ontology integrates the primary groups, user stages, topics, guides, tools, and measures to create a unified, efficient, and adaptive system.</p>
 		</section>
-		
+
 		<section id="primary-groups">
 			<h1>Primary Groups</h1>
 			<img src="https://i.ibb.co/cLhznT8/sales-agent.png" alt="agent" border="0" class="inline-img">
@@ -162,10 +166,10 @@
 			<img src="https://i.ibb.co/2k3W0LG/robot.png" alt="robot" border="0" class="inline-img">
 			<p>The AI first classifies inquiries into one of two primary groups: Sales or Service. Sales inquiries encompass requests for assistance with purchasing new furniture, understanding promotions, and customizing orders. Service inquiries cover post-purchase needs such as delivery status, rescheduling, warranty claims, or product issues. By distinguishing between these two groups, the AI ensures that the inquiry is routed to the appropriate team or handled autonomously where applicable. This differentiation allows the system to address user needs more effectively while aligning with the organizational structure.</p>
 		</section>
-		
+
 		<section id="journey-stages">
 			<h1>Journey Stages</h1>
-			<img src="https://i.ibb.co/2NVFCP8/journey.png" alt="Journey Stages Icon" class="section-img"/>
+			<img src="https://i.ibb.co/2NVFCP8/journey.png" alt="Journey Stages Icon" class="section-img" />
 			<p>The AI further refines its understanding of the inquiry by identifying the user's stage in the Customer Journey. These stages include:</p>
 			<ul>
 				<li><strong>Pre-Purchase:</strong> Customers exploring product details, availability, or promotions.</li>
@@ -180,7 +184,7 @@
 
 		<section id="topics">
 			<h1>Topics</h1>
-			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="Topics Icon" class="section-img"/>
+			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="Topics Icon" class="section-img" />
 			<p>The AI classifies inquiries into well-differentiated Topics to streamline responses and guide users effectively. Key topics include:
 
 				- Product Information Requests: Specifications, dimensions, and materials.
@@ -191,34 +195,34 @@
 				- Warranty Service Requests: Repairs or replacements under warranty.
 				- Payment and Billing Issues: Financing, payment errors, and disputes.
 				- Customer Feedback and Complaints: Logging feedback or addressing complaints.
-				
-			 These topics allow the AI to quickly categorize and address customer inquiries, providing a structured approach to problem-solving.</p>
+
+				These topics allow the AI to quickly categorize and address customer inquiries, providing a structured approach to problem-solving.</p>
 		</section>
-	
+
 		<section id="guides">
 			<h1>Guides</h1>
-			<img src="https://i.ibb.co/DRRg5Hz/guides.png" alt="Guides Icon" class="section-img"/>
+			<img src="https://i.ibb.co/DRRg5Hz/guides.png" alt="Guides Icon" class="section-img" />
 			<p>Discover the guides that provide step-by-step assistance for our customer service agents.</p>
 		</section>
 
 		<section id="tools">
 			<h1>Tools</h1>
-			<img src="https://i.ibb.co/rkgVdhp/tools.png" alt="Tools Icon" class="section-img"/>
+			<img src="https://i.ibb.co/rkgVdhp/tools.png" alt="Tools Icon" class="section-img" />
 			<p>Learn about the tools that enhance customer interactions and streamline processes.</p>
 		</section>
 
 		<section id="measure">
 			<h1>Measure</h1>
-			<img src="https://i.ibb.co/XCfqNns/performance.png" alt="AI Performance Icon" class="section-img"/>
+			<img src="https://i.ibb.co/XCfqNns/performance.png" alt="AI Performance Icon" class="section-img" />
 			<p>Understand how we evaluate AI performance and customer satisfaction.</p>
 		</section>
 
 		<section id="improve">
 			<h1>Improve</h1>
-			<img src="https://i.ibb.co/sVX1PFd/testing.png" alt="Improve Icon" class="section-img"/>
+			<img src="https://i.ibb.co/sVX1PFd/testing.png" alt="Improve Icon" class="section-img" />
 			<p>Learn about the continuous improvement efforts to optimize our customer service experiences.</p>
-			
-			
+
+
 			<div id="main-div">
 				<h1></h1>
 				<p>Welcome to the testing page for the Bob's Discount Furniture AI Agent. Please follow the guidelines below to ensure effective testing:</p>
