--- a/bobs.html
+++ b/bobs.html
@@ -184,20 +184,29 @@
 
 		<section id="topics">
 			<h1>Topics</h1>
-			<img src="https://i.ibb.co/pQwb29z/topics.png" alt="Topics Icon" class="section-img" />
-			<p>The AI classifies inquiries into well-differentiated Topics to streamline responses and guide users effectively. Key topics include:
-
-				- Product Information Requests: Specifications, dimensions, and materials.
-				- Order Placement Assistance: Support with purchasing furniture.
-				- Delivery Scheduling: Coordination of delivery dates and times.
-				- Order Modifications: Changes to color, size, or quantity.
-				- Return and Exchange Inquiries: Policies and processes for returns.
-				- Warranty Service Requests: Repairs or replacements under warranty.
-				- Payment and Billing Issues: Financing, payment errors, and disputes.
-				- Customer Feedback and Complaints: Logging feedback or addressing complaints.
-
-				These topics allow the AI to quickly categorize and address customer inquiries, providing a structured approach to problem-solving.</p>
+			<img src="https://i.ibb.co/pQwb29z/topics-icon.png" alt="Topics Icon" class="section-img" />
+			<p>The AI categorizes customer inquiries into key topics to streamline responses and provide targeted assistance. These topics include:</p>
+			<ul>
+				<li><strong>Product Information Requests:</strong> General questions about furniture specifications such as dimensions, materials, and care instructions.</li>
+				<li><strong>Order Placement Assistance:</strong> Specific requests for help with placing an order through the website or in-store.</li>
+				<li><strong>Order, Delivery and Service Status Updates:</strong> Customers checking the status of their order, including shipping and delivery timelines.</li>
+				<li><strong>Delivery Scheduling:</strong> Assistance with scheduling or rescheduling delivery dates and understanding delivery options.</li>
+				<li><strong>Order Modifications:</strong> Customer requests for modifying existing orders, such as changing color, size, or quantity.</li>
+				<li><strong>Product Availability Checks:</strong> Inquiries about the availability of specific items, including wait times for out-of-stock products.</li>
+				<li><strong>Return and Exchange Inquiries:</strong> Assist customers with the process for returning or exchanging items, and understanding associated policies.</li>
+				<li><strong>Warranty Service Requests:</strong> Questions about warranty terms and requests for service under warranty conditions.</li>
+				<li><strong>Refund Processes:</strong> Inquiries on how to request refunds for returned items or orders canceled by the customer or due to inventory issues.</li>
+				<li><strong>Assembly Instructions:</strong> Questions about assembly of furniture items, availability of assembly services, and troubleshooting assembly problems.</li>
+				<li><strong>Promotions and Discounts:</strong> Information about current promotions, sales events, and eligibility for discounts.</li>
+				<li><strong>Payment and Billing Issues:</strong> Help with issues related to payments, billing errors, or financing options.</li>
+				<li><strong>Website Navigation Help:</strong> Assistance with navigating the online store, using features like wish lists and product comparisons.</li>
+				<li><strong>Customer Feedback and Complaints:</strong> Providing a channel for customer feedback or filing complaints about their shopping experience.</li>
+				<li><strong>Store Pickup Inquiries:</strong> Help with managing store pickups.</li>
+			</ul>
+			<p>Organizing inquiries by topic ensures the AI delivers precise and efficient solutions tailored to customer needs.</p>
 		</section>
+		
+		
 
 		<section id="guides">
 			<h1>Guides</h1>
