--- a/bobs.html
+++ b/bobs.html
@@ -80,7 +80,7 @@
 
 		footer {
 			background-color: #ECBD75;
-			padding: 8px 20px;
+			padding: 0px 20px;
 			text-align: left;
 			color: #fff;
 			box-sizing: border-box;
@@ -97,6 +97,7 @@
 			width: 22%;
 			border-radius: 20px;
 			margin: 0 22px;
+			max-height: 250px;
 		}
 
 		.full-img {
@@ -148,7 +149,7 @@
 		<a href="#tools" onclick="toggleSection('tools')">Tools</a>
 		<a href="#measure" onclick="toggleSection('measure')">Measure</a>
 		<a href="#improve" onclick="toggleSection('improve')">Improve</a>
-		<a href="#test" onclick="toggleSection('test')">Test</a>
+		<a href="#roadmap" onclick="toggleSection('roadmap')">Test</a>
 
 	</div>
 
@@ -161,10 +162,10 @@
 
 		<section id="primary-groups">
 			<h1>Primary Groups</h1>
+			<p>The AI first classifies inquiries into one of two primary groups: Sales or Service. Sales inquiries encompass requests for assistance with purchasing new furniture, understanding promotions, and customizing orders. Service inquiries cover post-purchase needs such as delivery status, rescheduling, warranty claims, or product issues. By distinguishing between these two groups, the AI ensures that the inquiry is routed to the appropriate team or handled autonomously where applicable. This differentiation allows the system to address user needs more effectively while aligning with the organizational structure.</p>
 			<img src="https://i.ibb.co/cLhznT8/sales-agent.png" alt="agent" border="0" class="inline-img">
 			<img src="https://i.ibb.co/18mP8rX/care-agent.png" alt="robot" border="0" class="inline-img">
 			<img src="https://i.ibb.co/2k3W0LG/robot.png" alt="robot" border="0" class="inline-img">
-			<p>The AI first classifies inquiries into one of two primary groups: Sales or Service. Sales inquiries encompass requests for assistance with purchasing new furniture, understanding promotions, and customizing orders. Service inquiries cover post-purchase needs such as delivery status, rescheduling, warranty claims, or product issues. By distinguishing between these two groups, the AI ensures that the inquiry is routed to the appropriate team or handled autonomously where applicable. This differentiation allows the system to address user needs more effectively while aligning with the organizational structure.</p>
 		</section>
 
 		<section id="journey-stages">
@@ -207,25 +208,47 @@
 		</section>
 		
 		
-
 		<section id="guides">
 			<h1>Guides</h1>
 			<img src="https://i.ibb.co/DRRg5Hz/guides.png" alt="Guides Icon" class="section-img" />
-			<p>Discover the guides that provide step-by-step assistance for our customer service agents.</p>
+			<p>The AI uses guided processes to handle specific scenarios efficiently, ensuring customers receive consistent and accurate support. These guides include:</p>
+			<ul>
+				<li><strong>Sales Escalation:</strong> Handles inquiries that require escalation to the sales team for assistance with product recommendations, promotions, and order placement.</li>
+				<li><strong>Day of Delivery:</strong> Provides real-time support for customers on their delivery day, including tracking updates and coordination with delivery teams.</li>
+				<li><strong>Delivery Scheduling:</strong> Assists customers in scheduling or rescheduling furniture deliveries, offering available date options and confirming details.</li>
+				<li><strong>Recently Delivered:</strong> Supports customers with post-delivery needs, such as resolving immediate issues with assembly, damages, or missing items.</li>
+				<li><strong>Store Pickup:</strong> Guides customers through the process of scheduling and managing store pickup for their furniture orders.</li>
+				<li><strong>Product Issues:</strong> Helps customers report and resolve issues with purchased products, including warranty claims, damages, and defects.</li>
+				<li><strong>General Support:</strong> Provides assistance with a variety of general inquiries and concerns, ensuring comprehensive support for all customer needs.</li>
+			</ul>
 		</section>
-
+	
 		<section id="tools">
 			<h1>Tools</h1>
 			<img src="https://i.ibb.co/rkgVdhp/tools.png" alt="Tools Icon" class="section-img" />
-			<p>Learn about the tools that enhance customer interactions and streamline processes.</p>
+			<p>The AI agent utilizes various tools to automate processes and enhance customer service. These tools include:</p>
+			<ul>
+				<li><strong>Get Order Status:</strong> Provide customers with real-time updates on their order status, including processing, shipping, and delivery timelines.</li>
+				<li><strong>Confirm Delivery:</strong> Allow customers to confirm their scheduled delivery details, such as date, time, and address, ensuring all arrangements are correct.</li>
+				<li><strong>Schedule Delivery:</strong> Help customers schedule the delivery of their furniture by selecting available dates and providing confirmation.</li>
+				<li><strong>Reschedule Delivery:</strong> Assist customers in rescheduling their delivery by providing new options for dates and updating delivery details.</li>
+				<li><strong>Day of Delivery Tracking:</strong> Provide real-time updates and tracking information for deliveries happening on the scheduled day.</li>
+				<li><strong>Report a Product Issue:</strong> Allow customers to report issues with their delivered products, including damages or missing items, and initiate support for resolution.</li>
+			</ul>
 		</section>
-
+		
 		<section id="measure">
 			<h1>Measure</h1>
-			<img src="https://i.ibb.co/XCfqNns/performance.png" alt="AI Performance Icon" class="section-img" />
-			<p>Understand how we evaluate AI performance and customer satisfaction.</p>
+			<img src="https://i.ibb.co/XCfqNns/performance.png" alt="Measure Icon" class="section-img" />
+			<p>To evaluate the effectiveness of the AI agent, we rely on the following key performance measurements:</p>
+			<ul>
+				<li><strong>Response Accuracy:</strong> The percentage of responses correctly aligned with customer inquiries, ensuring accurate and helpful information is provided.</li>
+				<li><strong>Resolution Rate:</strong> The proportion of customer inquiries successfully resolved by the AI without the need for escalation to a human agent.</li>
+				<li><strong>Customer Satisfaction (CSAT):</strong> Feedback collected from customers after interactions, measuring their satisfaction with the AI's assistance.</li>
+			</ul>
+			<p>These measurements help ensure the AI agent continuously improves and delivers exceptional customer service experiences.</p>
 		</section>
-
+		
 		<section id="improve">
 			<h1>Improve</h1>
 			<img src="https://i.ibb.co/sVX1PFd/testing.png" alt="Improve Icon" class="section-img" />
@@ -291,6 +314,21 @@
 				</div>
 			</div>
 		</section>
+
+		<section id="roadmap">
+			<h1>Roadmap</h1>
+			<img src="https://i.ibb.co/ncpVnFX/roadmap.png" alt="Roadmap Icon" class="section-img" />
+			<p>The AI agent’s development roadmap outlines key milestones to enhance capabilities and deliver superior customer experiences. Upcoming milestones include:</p>
+			<ul>
+				<li><strong>Voice Channel Concierge 1.0:</strong> Launching AI-powered assistance for voice channels, providing initial support and call routing.</li>
+				<li><strong>Digital Messaging Concierge 1.0:</strong> Introducing AI-driven support for digital messaging platforms, ensuring seamless and efficient responses to customer inquiries.</li>
+				<li><strong>Voice Automations with Multi-Modal 1.1:</strong> Expanding voice automation capabilities with multi-modal integration to handle complex inquiries more effectively.</li>
+				<li><strong>Digital Messaging Full AI Automation 1.2:</strong> Achieving full automation in digital messaging, enabling the AI to resolve most inquiries without human intervention.</li>
+				<li><strong>Additional Guides, Tools, and Automations:</strong> Continuously developing new guides, tools, and process automations to expand the AI’s functionality and adaptability.</li>
+			</ul>
+			<p>This roadmap ensures the AI agent evolves to meet customer needs and aligns with Bob’s commitment to exceptional service.</p>
+		</section>
+		
 
 	</main>
 
