--- a/bobs.html
+++ b/bobs.html
@@ -148,7 +148,7 @@
 		<a href="#tools" onclick="toggleSection('tools')">Tools</a>
 		<a href="#measure" onclick="toggleSection('measure')">Measure</a>
 		<a href="#improve" onclick="toggleSection('improve')">Improve</a>
-		<a href="#roadmap" onclick="toggleSection('roadmap')">Test</a>
+		<a href="#roadmap" onclick="toggleSection('roadmap')">Roadmap</a>
 
 	</div>
 
@@ -244,6 +244,7 @@
 				<li><strong>Response Accuracy:</strong> The percentage of responses correctly aligned with customer inquiries, ensuring accurate and helpful information is provided.</li>
 				<li><strong>Resolution Rate:</strong> The proportion of customer inquiries successfully resolved by the AI without the need for escalation to a human agent.</li>
 				<li><strong>Customer Satisfaction (CSAT):</strong> Feedback collected from customers after interactions, measuring their satisfaction with the AI's assistance.</li>
+				<li><strong>Use Case Goals:</strong>Goal achievement related to guides objectives and tool automations.</li>
 			</ul>
 			<p>These measurements help ensure the AI agent continuously improves and delivers exceptional customer service experiences.</p>
 		</section>
